feat: removed unnecessary elements

--- a/static/index.html
+++ b/static/index.html
@@ -7,6 +7,6 @@
     <title>Dishant Mishra</title>
   </head>
   <body>
-    <div id="root"></div>
+    <section id="root"></section>
   </body>
 </html>
